--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,13 @@ dependencies:
   flutter:
     sdk: flutter
 
+  image_picker: ^0.8.4
+  firebase_core: ^2.11.0
+
+  firebase_auth: ^4.5.0
+  cloud_firestore: ^4.15.5
+
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
